--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ text-align:center;color:#fff;padding:20px;}
     </style>
 </head>
 <body>
-    <p style="text-align:center;">Work on Desktop Mode Only <br> <a target='_blank' href="github.com/d43ash1sh">Dev.io</a></p>
+    <p style="text-align:center;">Work on Desktop Mode Only <br> </p>
     <div id="puzzle" class="sortable">
         <div id='tile1' class='tile'></div>
         <div id='tile2' class='tile'></div>
